...
            style = MaterialTheme.typography.h5.copy(fontWeight = FontWeight.Bold)
        )
        Spacer(Modifier.height(8.dp))
        TextField(
            modifier = Modifier.fillMaxWidth(),
            value = updatedTaskTitle,
            placeholder = { Text(text = "Task Title") },
            onValueChange = { updatedTaskTitle = it },
        )
        Row {
            Spacer(Modifier.weight(1f))
            TextButton(onClick = onCancel) {
                Text(text = "Cancel")
...
